--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
     <button id="dismissUpdate" class="update-btn" style="background:rgba(255,255,255,0.15);">Később</button>
   </div>
 
-  <div id="appVersion" style="position:fixed;left:8px;top:6px;font-size:11px;color:#5d6b85;opacity:.8;z-index:50;">v2.7.0 PWA</div>
+  <div id="appVersion" style="position:fixed;left:8px;top:6px;font-size:11px;color:#5d6b85;opacity:.8;z-index:50;">v2.8.0 PWA</div>
+
+  <div id="syncStatus" style="position:fixed;right:12px;top:6px;font-size:11px;color:#5d6b85;opacity:.8;z-index:50;transition:all 0.3s;">☁️ Cloud</div>
 
   <div id="shareWidget" class="share-widget">
     <div class="share-bubble" onclick="handleShare()">
@@ -135,7 +137,10 @@
         </header>
         <div class="stack">
           <div class="card">
-            <h3>Összefoglaló</h3>
+            <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:16px;">
+              <h3>Összefoglaló</h3>
+              <button id="clearAll" class="btn-secondary" style="width:auto;padding:8px 16px;font-size:0.85rem;">🗑️ Törlés</button>
+            </div>
             <div style="display:grid;grid-template-columns:1fr 1fr;gap:12px;margin-bottom:20px;">
               <div style="padding:16px;background:rgba(49,214,159,0.1);border-radius:12px;text-align:center;">
                 <p style="font-size:0.85rem;color:var(--muted);margin-bottom:4px;">💚 Spórolva</p>
@@ -160,6 +165,8 @@
               <option value="date_asc">Legrégebbi először</option>
               <option value="price_desc">Legnagyobb ár</option>
               <option value="price_asc">Legkisebb ár</option>
+              <option value="name_asc">Név (A-Z)</option>
+              <option value="name_desc">Név (Z-A)</option>
             </select>
           </div>
           <div class="card">
@@ -195,7 +202,7 @@
             <input id="monthlyCap" placeholder="Havi limit (Ft)" type="number" />
             <h3 style="margin-top:20px;">Megtakarítási cél</h3>
             <input id="savingGoal" placeholder="Cél összege (Ft)" type="number" />
-            <div id="goalProgressBar" style="width:0%;height:8px;background:linear-gradient(90deg,#31d69f,#28d3c0);border-radius:999px;margin-top:16px;"></div>
+            <div id="goalProgressBar" style="width:0%;height:8px;background:linear-gradient(90deg,#31d69f,#28d3c0);border-radius:999px;margin-top:16px;transition:width 0.3s;"></div>
             <p id="goalProgressLabel" style="text-align:center;font-size:0.9rem;margin-top:8px;">0%</p>
             <button id="saveGoals" style="margin-top:20px;">💾 Mentés</button>
             <button id="resetGoals" class="btn-secondary">🔄 Alaphelyzet</button>
@@ -205,11 +212,23 @@
     </main>
   </div>
 
-  <nav id="main-nav" class="show">
-    <button class="tab active" data-view="calc"><svg viewBox="0 0 24 24"><path d="M6 2.75h12A3.25 3.25 0 0 1 21.25 6v12A3.25 3.25 0 0 1 18 21.25H6A3.25 3.25 0 0 1 2.75 18V6A3.25 3.25 0 0 1 6 2.75Zm.5 4a.75.75 0 0 0 0 1.5h2a.75.75 0 0 0 0-1.5h-2Zm0 4a.75.75 0 0 0 0 1.5h10a.75.75 0 0 0 0-1.5h-10Zm0 4a.75.75 0 0 0 0 1.5h10a.75.75 0 0 0 0-1.5h-10Z"/></svg><span>Számol</span></button>
-    <button class="tab" data-view="results"><svg viewBox="0 0 24 24"><path d="M12 3.75A8.25 8.25 0 1 0 20.25 12a.75.75 0 0 1 1.5 0 9.75 9.75 0 1 1-3.31-7.324l1.155-1.154a.75.75 0 1 1 1.06 1.06l-2.5 2.5a.75.75 0 0 1-1.28-.53V4.5a.75.75 0 0 1 1.5 0v1.134A8.23 8.23 0 0 0 12 3.75Zm.75 4.5v3.44l2.845 1.705a.75.75 0 0 1-.76 1.29l-3.25-1.95A.75.75 0 0 1 11.25 12V8.25a.75.75 0 0 1 1.5 0Z"/></svg><span>Történet</span></button>
-    <button class="tab" data-view="stats"><svg viewBox="0 0 24 24"><path d="M5.75 4A1.75 1.75 0 0 1 7.5 2.25h1A1.75 1.75 0 0 1 10.25 4v15.75a2 2 0 0 1-2 2h-.75a2 2 0 0 1-2-2Zm5.5 5A1.75 1.75 0 0 1 13 7.25h1A1.75 1.75 0 0 1 15.75 9v10.75a2 2 0 0 1-2 2h-.75a2 2 0 0 1-2-2Zm5.5-5A1.75 1.75 0 0 1 18.5 4v15.75a2 2 0 0 1-2 2h-.75a2 2 0 0 1-2-2V4a1.75 1.75 0 0 1 1.75-1.75h1Z"/></svg><span>Statisztika</span></button>
-    <button class="tab" data-view="goals"><svg viewBox="0 0 24 24"><path d="M12 2a10 10 0 1 0 0 20 10 10 0 0 0 0-20zm0 2a8 8 0 1 1 0 16 8 8 0 0 1 0-16zm3.5 9a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm-7 0a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/></svg><span>Célok</span></button>
+  <nav id="main-nav" class="hidden">
+    <button class="tab active" data-view="calc">
+      <svg viewBox="0 0 24 24"><path d="M6 2.75h12A3.25 3.25 0 0 1 21.25 6v12A3.25 3.25 0 0 1 18 21.25H6A3.25 3.25 0 0 1 2.75 18V6A3.25 3.25 0 0 1 6 2.75Zm.5 4a.75.75 0 0 0 0 1.5h2a.75.75 0 0 0 0-1.5h-2Zm0 4a.75.75 0 0 0 0 1.5h10a.75.75 0 0 0 0-1.5h-10Zm0 4a.75.75 0 0 0 0 1.5h10a.75.75 0 0 0 0-1.5h-10Z"/></svg>
+      <span>Számol</span>
+    </button>
+    <button class="tab" data-view="results">
+      <svg viewBox="0 0 24 24"><path d="M12 3.75A8.25 8.25 0 1 0 20.25 12a.75.75 0 0 1 1.5 0 9.75 9.75 0 1 1-3.31-7.324l1.155-1.154a.75.75 0 1 1 1.06 1.06l-2.5 2.5a.75.75 0 0 1-1.28-.53V4.5a.75.75 0 0 1 1.5 0v1.134A8.23 8.23 0 0 0 12 3.75Zm.75 4.5v3.44l2.845 1.705a.75.75 0 0 1-.76 1.29l-3.25-1.95A.75.75 0 0 1 11.25 12V8.25a.75.75 0 0 1 1.5 0Z"/></svg>
+      <span>Történet</span>
+    </button>
+    <button class="tab" data-view="stats">
+      <svg viewBox="0 0 24 24"><path d="M5.75 4A1.75 1.75 0 0 1 7.5 2.25h1A1.75 1.75 0 0 1 10.25 4v15.75a2 2 0 0 1-2 2h-.75a2 2 0 0 1-2-2Zm5.5 5A1.75 1.75 0 0 1 13 7.25h1A1.75 1.75 0 0 1 15.75 9v10.75a2 2 0 0 1-2 2h-.75a2 2 0 0 1-2-2Zm5.5-5A1.75 1.75 0 0 1 18.5 4v15.75a2 2 0 0 1-2 2h-.75a2 2 0 0 1-2-2V4a1.75 1.75 0 0 1 1.75-1.75h1Z"/></svg>
+      <span>Statisztika</span>
+    </button>
+    <button class="tab" data-view="goals">
+      <svg viewBox="0 0 24 24"><path d="M12 2a10 10 0 1 0 0 20 10 10 0 0 0 0-20zm0 2a8 8 0 1 1 0 16 8 8 0 0 1 0-16zm3.5 9a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm-7 0a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"/></svg>
+      <span>Célok</span>
+    </button>
   </nav>
 
   <div id="profileModal" class="modal hidden">
