--- a/index.html
+++ b/index.html
@@ -247,8 +247,7 @@
           </div>
 
           <div class="card" style="text-align:center;">
-            <button onclick="exportData()">📥 Adatok exportálása (CSV)</button>
-            <button class="btn-secondary" onclick="goTo('calculator')" style="margin-top:12px;">🔙 Új kalkuláció</button>
+            <button onclick="goTo('calculator')">🔙 Új kalkuláció</button>
           </div>
         </div>
       </section>
