--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
   <!-- KRITIKUS: Version.js betöltése ELŐSZÖR! -->
   <script src="version.js"></script>
   
+  <!-- Supabase JS Client -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.3/dist/umd/supabase.min.js"></script>
+  
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-G8BZPSFGGG"></script>
   <script>
