--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@
           <div class="welcome-pill">💰 Számolj és legyél szomorú!</div>
           <h1>Munkaóra</h1>
 
-                   <div class="hero-clock-3d" role="img" aria-label="Alarm clock">
-            <div class="clock-outer">
-              <div class="clock-inner">
-                <div class="clock-hand hand-hour"></div>
-                <div class="clock-hand hand-minute"></div>
-                <div class="clock-center"></div>
-              </div>
+          <div class="hero-clock" role="img" aria-label="Alarm clock">
+            <div class="clock-body">
+              <div class="clock-hand hour"></div>
+              <div class="clock-hand minute"></div>
             </div>
+            <div class="clock-bell left"></div>
+            <div class="clock-bell right"></div>
+            <div class="clock-leg left"></div>
+            <div class="clock-leg right"></div>
           </div>
-
 
           <p class="welcome-copy">Számold ki, mennyi munkaórádba kerül egy vágyott vásárlás és érezd nagyon rosszul magad!</p>
 
