--- a/index.html
+++ b/index.html
@@ -13,9 +13,18 @@
   
   <!-- iOS PWA Support -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="Munkaóra" />
+  
+  <!-- Apple Touch Icons - Különböző méretek iOS-hez -->
   <link rel="apple-touch-icon" href="icons/icon-192.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="icons/icon-192.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="icons/icon-192.png" />
+  <link rel="apple-touch-icon" sizes="167x167" href="icons/icon-192.png" />
+  <link rel="apple-touch-icon" sizes="120x120" href="icons/icon-192.png" />
+  
+  <!-- iOS Startup Image -->
+  <link rel="apple-touch-startup-image" href="icons/icon-512.png" />
   
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="icons/icon-192.png" />
