--- a/index.html
+++ b/index.html
@@ -15,31 +15,31 @@
   <title>Munkaóra • Pro</title>
   
   <!-- PWA Manifest -->
-  <link rel="manifest" href="manifest.json" />
+  <link rel="manifest" href="/manifest.json" />
   
-  <!-- iOS PWA Support -->
+  <!-- 🍎 iOS PWA Support -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="Munkaóra" />
   
-  <!-- Apple Touch Icons - Különböző méretek iOS-hez -->
-  <link rel="apple-touch-icon" href="icons/icon-192.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="icons/icon-192.png" />
-  <link rel="apple-touch-icon" sizes="152x152" href="icons/icon-192.png" />
-  <link rel="apple-touch-icon" sizes="167x167" href="icons/icon-192.png" />
-  <link rel="apple-touch-icon" sizes="120x120" href="icons/icon-192.png" />
+  <!-- 🍎 Apple Touch Icons - KRITIKUS: Abszolút útvonalak! -->
+  <link rel="apple-touch-icon" href="/icons/icon-192.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-192.png" />
+  <link rel="apple-touch-icon" sizes="167x167" href="/icons/icon-192.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="/icons/icon-192.png" />
+  <link rel="apple-touch-icon" sizes="120x120" href="/icons/icon-192.png" />
   
   <!-- iOS Startup Image -->
-  <link rel="apple-touch-startup-image" href="icons/icon-512.png" />
+  <link rel="apple-touch-startup-image" href="/icons/icon-512.png" />
   
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="icons/icon-192.png" />
+  <link rel="icon" type="image/png" href="/icons/icon-192.png" />
   
   <!-- Stylesheet -->
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="/styles.css" />
   
   <!-- KRITIKUS: Version.js betöltése ELŐSZÖR! -->
-  <script src="version.js"></script>
+  <script src="/version.js"></script>
   
   <!-- 🔥 FORCE RELOAD handler -->
   <script>
@@ -308,6 +308,6 @@
   </nav>
 
   <!-- JavaScript -->
-  <script src="app.js"></script>
+  <script src="/app.js"></script>
 </body>
 </html>
