--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="Munkaóra" />
   
-  <!-- 🍎 Apple Touch Icons - KRITIKUS: Abszolút útvonalak! -->
-  <link rel="apple-touch-icon" href="/icons/icon-192.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-192.png" />
+  <!-- 🍎 Apple Touch Icons - KRITIKUS: 180x180px külön fájl! -->
+  <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png" />
   <link rel="apple-touch-icon" sizes="167x167" href="/icons/icon-192.png" />
   <link rel="apple-touch-icon" sizes="152x152" href="/icons/icon-192.png" />
   <link rel="apple-touch-icon" sizes="120x120" href="/icons/icon-192.png" />
