--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="theme-color" content="#356dff" />
   <meta name="description" content="Számold ki, mennyi munkaórádba kerül egy vásárlás!" />
   
-  <title>Munkaóra • Pro</title>
+  <title>Tivlo • Pro</title>
   
   <!-- PWA Manifest -->
   <link rel="manifest" href="/manifest.json" />
@@ -20,7 +20,7 @@
   <!-- 🍎 iOS PWA Support -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <meta name="apple-mobile-web-app-title" content="Munkaóra" />
+  <meta name="apple-mobile-web-app-title" content="Tivlo" />
   
   <!-- 🍎 Apple Touch Icons - KRITIKUS: 180x180px külön fájl! -->
   <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" />
@@ -103,7 +103,7 @@
       <section id="screen-welcome" class="screen active">
         <div class="welcome-hero">
           <div class="welcome-pill">💰 Számolj és legyél szomorú!</div>
-          <h1>Munkaóra</h1>
+          <h1>Tivlo</h1>
 
           <div class="hero-clock" role="img" aria-label="Alarm clock">
             <div class="clock-body">
@@ -121,7 +121,7 @@
           <!-- INVITE CARD -->
           <div id="inviteCard" class="card invite-card">
             <h3>🔑 Meghívó szükséges</h3>
-            <p class="invite-copy">Add meg az invite kódodat a Munkaóra Pro élmény eléréséhez.</p>
+            <p class="invite-copy">Add meg az invite kódodat a Tivloélmény eléréséhez.</p>
             <div class="invite-form">
               <input id="inviteCodeInput" placeholder="Pl. 1843-5092-JKLP" autocomplete="one-time-code" inputmode="text" />
               <button type="button" onclick="validateInvite()">✅ Kód ellenőrzése</button>
