--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <section id="screen-profile" class="screen">
         <header class="screen-header">
           <div>
-            <span class="caption">Munkaóra</span>
+            <span class="caption">Tivlo</span>
             <h2>⚙️ Profilod</h2>
           </div>
           <div class="theme-toggle" onclick="toggleTheme()" title="Témák váltása">
@@ -170,7 +170,7 @@
       <section id="screen-calculator" class="screen">
         <header class="screen-header">
           <div>
-            <span class="caption">Munkaóra</span>
+            <span class="caption">Tivlo</span>
             <h2>🧮 Kalkulátor</h2>
           </div>
           <div class="theme-toggle" onclick="toggleTheme()" title="Témák váltása">
@@ -205,7 +205,7 @@
       <section id="screen-history" class="screen">
         <header class="screen-header">
           <div>
-            <span class="caption">Munkaóra</span>
+            <span class="caption">Tivlo</span>
             <h2>📜 Előzmények</h2>
           </div>
           <div class="theme-toggle" onclick="toggleTheme()" title="Témák váltása">
@@ -224,7 +224,7 @@
       <section id="screen-stats" class="screen">
         <header class="screen-header">
           <div>
-            <span class="caption">Munkaóra</span>
+            <span class="caption">Tivlo</span>
             <h2>📊 Statisztikák</h2>
           </div>
           <div class="theme-toggle" onclick="toggleTheme()" title="Témák váltása">
