--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="theme-color" content="#356dff" />
   <meta name="description" content="Számold ki, mennyi munkaórádba kerül egy vásárlás!" />
   
-  <title>Tivlo • Pro</title>
+  <title>Tivlo</title>
   
   <!-- PWA Manifest -->
   <link rel="manifest" href="/manifest.json" />
