--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <!-- 🔥 KRITIKUS: Ne cache-elje a böngésző! -->
-  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-  <meta http-equiv="Pragma" content="no-cache">
-  <meta http-equiv="Expires" content="0">
+  <!-- 🍎 iOS PWA Meta Tags - JAVÍTOTT VERZIÓ -->
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="apple-mobile-web-app-title" content="Tivlo" />
   
   <meta name="theme-color" content="#356dff" />
   <meta name="description" content="Számold ki, mennyi munkaórádba kerül egy vásárlás!" />
@@ -17,17 +17,12 @@
   <!-- PWA Manifest -->
   <link rel="manifest" href="/manifest.json" />
   
-  <!-- 🍎 iOS PWA Support -->
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <meta name="apple-mobile-web-app-title" content="Tivlo" />
-  
-  <!-- 🍎 Apple Touch Icons - KRITIKUS: 180x180px külön fájl! -->
+  <!-- 🍎 Apple Touch Icons - iOS PWA -->
   <link rel="apple-touch-icon" href="/icons/apple-touch-icon.png" />
   <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png" />
-  <link rel="apple-touch-icon" sizes="167x167" href="/icons/icon-192.png" />
-  <link rel="apple-touch-icon" sizes="152x152" href="/icons/icon-192.png" />
-  <link rel="apple-touch-icon" sizes="120x120" href="/icons/icon-192.png" />
+  <link rel="apple-touch-icon" sizes="167x167" href="/icons/apple-touch-icon.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="/icons/apple-touch-icon.png" />
+  <link rel="apple-touch-icon" sizes="120x120" href="/icons/apple-touch-icon.png" />
   
   <!-- iOS Startup Image -->
   <link rel="apple-touch-startup-image" href="/icons/icon-512.png" />
