--- a/index.html
+++ b/index.html
@@ -19,11 +19,14 @@
   
   <!-- 🍎 iOS PWA Support -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="Tivlo" />
   
-  <!-- 🍎 Apple Touch Icon - ROOT PATH! iOS automatikusan megtalálja! -->
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+  <!-- 🍎 Apple Touch Icons - OPAQUE, MÉRETEKKEL! -->
+  <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png" />
+  <link rel="apple-touch-icon" sizes="167x167" href="/icons/apple-touch-icon-167x167.png" />
+  <link rel="apple-touch-icon" sizes="152x152" href="/icons/apple-touch-icon-152x152.png" />
+  <link rel="apple-touch-icon" sizes="120x120" href="/icons/apple-touch-icon-120x120.png" />
   
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="/icons/icon-192.png" />
