--- a/index.html
+++ b/index.html
@@ -9,27 +9,25 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0">
   
-  <meta name="theme-color" content="#356dff" />
-  <meta name="description" content="Számold ki, mennyi munkaórádba kerül egy vásárlás!" />
-  
   <title>Tivlo</title>
-  
-  <!-- PWA Manifest -->
-  <link rel="manifest" href="/manifest.json" />
   
   <!-- 🍎 iOS PWA Support -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <meta name="apple-mobile-web-app-title" content="Tivlo" />
   
-  <!-- 🍎 Apple Touch Icons - OPAQUE, MÉRETEKKEL! -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png" />
-  <link rel="apple-touch-icon" sizes="167x167" href="/icons/apple-touch-icon-167x167.png" />
-  <link rel="apple-touch-icon" sizes="152x152" href="/icons/apple-touch-icon-152x152.png" />
-  <link rel="apple-touch-icon" sizes="120x120" href="/icons/apple-touch-icon-120x120.png" />
+  <!-- 🍎 Apple Touch Icons -->
+  <link rel="apple-touch-icon" href="/icons/icon-512.svg" />
+  
+  <!-- Theme -->
+  <meta name="theme-color" content="#356dff" />
+  <meta name="description" content="Számold ki, mennyi munkaórádba kerül egy vásárlás!" />
+  
+  <!-- PWA Manifest -->
+  <link rel="manifest" href="/manifest.json" />
   
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/icons/icon-192.png" />
+  <link rel="icon" type="image/svg+xml" href="/icons/icon-192.svg" />
   
   <!-- Stylesheet -->
   <link rel="stylesheet" href="/styles.css" />
